# jennifer

./: .clang-format  .gitignore  CMakeLists.txt  WORKSPACE
demo/yolo/: CMakeLists.txt  yolo.cpp
include/jennifer/: tensor.h
jennifer/: tensor.cpp
jennifer/data/: tensor.cpp  tensor.hpp
jennifer/layer/: layer.hpp
jennifer/runtime/: attribute.hpp  operand.hpp  operator.hpp  parameter.hpp
jennifer/utils/: common.hpp
source/: tensor.cpp
test/: CMakeLists.txt  test_main.cpp  test_tensor.cpp
